# ocaml-covar

./: .gitignore  .merlin  LICENSE  Makefile  README.md  _oasis  _tags  `  covar-async.opam  covar-base.opam  covar-kernels.opam  covar.install  myocamlbuild.ml  setup.ml
lib/async/: .merlin  covar_agent.ml  covar_predictive.ml  dune  import.ml  jbuild
lib/base/: .merlin  covar.ml  covar_bessel.ml  covar_float.ml  covar_gamma.ml  covar_instance.ml  covar_kernel.ml  covar_logger.ml  covar_loss.ml  covar_optional_args.ml  covar_predictive.ml  covar_trig.ml  dune  jbuild
lib/kernels/: .merlin  covar_bias.ml  covar_brownian.ml  covar_generic.ml  covar_heterogeneous.ml  covar_homogeneous.ml  covar_kernels.ml  covar_linear.ml  covar_matern.ml  covar_misc.ml  covar_periodic.ml  covar_record.ml  covar_squared_exponential.ml  covar_temporal.ml  covar_update_rules.ml  dune  import.ml  jbuild
lib/test/: covar_test.ml  dune  import.ml  test_kernel.ml
opam/: descr  findlib  opam
src/: META  omkl.mldylib  omkl_bessel.ml  omkl_gamma.ml  omkl_instance.ml  omkl_kernel.ml  omkl_kernels.ml  omkl_loss.ml  omkl_loss_fun.ml  omkl_optional_args.ml  omkl_predictive.ml
src/lib/: META  covar.ml  covar.mldylib  covar.mllib  covar_bessel.ml  covar_float.ml  covar_instance.ml  covar_kernel.ml  covar_logger.ml  covar_loss.ml  covar_matern.ml  covar_predictive.ml  covar_trig.ml  omkl_float.ml  omkl_instance.ml  omkl_kernel.ml  omkl_loss.ml  omkl_predictive.ml
src/lib/kernels/: covar_bias.ml  covar_brownian.ml  covar_heterogeneous.ml  covar_homogeneous.ml  covar_kernels.ml  covar_linear.ml  covar_matern.ml  covar_periodic.ml  covar_squared_exponential.ml  covar_temporal.ml  kernels.mldylib  kernels.mllib
src/test/: META  test.mldylib  test_kernel.ml
