opam-version: "2.0"
maintainer: "Carmelo Piccione <carmelo.piccione@gmail.com>"
authors: "Carmelo Piccione"
homepage: "https://github.com/struktured/ocaml-covar"
bug-reports: "https://github.com/struktured/ocaml-covar/issues"
license: "MIT"
tags: []

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "containers"
  "lacaml"
  "gsl"
  "base-threads"
  "ppx_jane"
  "ppx_deriving"
]

depexts: [
]
