(library
  (name covar_base)
  (public_name covar-base)
  (flags
    :standard
    -open Base
    -unsafe-string
  )
  (preprocess (pps ppx_jane ppx_deriving.make))
  (synopsis "Covariance functions in OCaml")
  (library_flags -linkall)
  (libraries
    base threads containers containers.data lacaml gsl
  )
)

