(library
  (name covar_kernels)
  (public_name covar-kernels)
  (flags
    :standard
    -unsafe-string
    -open Base
    -open Covar_base
  )
  (preprocess (pps ppx_jane ppx_deriving.make ppx_deriving.show))
  (synopsis "Various covariance functions (kernels) in OCaml")
  (library_flags -linkall)
  (libraries
    covar_base lacaml gsl
  )
)
